Fix for next-show display on mobile

--- a/static/less/home.less
+++ b/static/less/home.less
@@ -167,7 +167,7 @@
 			.navbar-nav > li > a {
 				padding-left:15px;
 				padding-right:15px;
-			}	
+			}
 		}
 	}
 	#members {
@@ -197,12 +197,12 @@
 			.navbar-nav > li > a {
 				padding-left:10px;
 				padding-right:10px;
-			}	
+			}
 		}
-	}	
+	}
 	#bio section p {
 		font-size:14px;
-	}	
+	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 	#top_brand {
@@ -273,11 +273,10 @@
 		padding-left: 46px;
 		z-index:1;
 		top:0;
-		h4 { 
+		h4 {
 			margin: 0 0 0 -46px;
 			font-size: 14px;
 			line-height: 15px;
-			padding-top: 16px;
 		}
 	}
 	#next_show.up h4 {
@@ -333,9 +332,18 @@
 	#next_show {
 		h4 {
 			font-size:12px;
+			padding-top: 18px;
+		}
+		a {
+			text-overflow: ellipsis;
+			display: inline-block;
+			white-space: nowrap;
+			vertical-align: bottom;
+			overflow-x: hidden;
+			max-width:220px;
 		}
 	}
-	#home_nav .container .navbar .nav > li > a, 
+	#home_nav .container .navbar .nav > li > a,
 	#home_nav.up .container .navbar .nav > li > a {
 		font-size:13px;
 	}
